# DroneLocalization

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.md  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  DEBUG_VIEWS_PLAN.md  Dockerfile  LICENSE  README.md  README_Eng.md  UNIFICATION_NOTES.md  conftest.py  coverage.txt  create_installer.iss  implementation_plan.md  main.py  project_analysis.md  pyproject.toml  requirements.txt  skills-lock.json  test_dll.py  test_rdd.py  user_config.example.json  user_config.json  user_config.json.bak-preEnableAll  user_config.json.truncated-bak
.github/workflows/: ci.yml
benchmarks/: hw_Shtepsill_20260721-2016.json  hw_Stozhar_20260721-1726.json  hw_Stozhar_20260721-2003.json  hw_Stozhar_20260721-2105.json  hw_Stozhar_20260721-2128.json  hw_Stozhar_20260721-2138.json
config/: __init__.py  access.py  app.py  config.py  config.yaml  database.py  graph.py  localization.py  models.py  models.py.bak-preextractorfix  paths.py
docs/: ADDENDUM_IMPLEMENTATION_PLAN.md  DB_INTERCHANGEABILITY.md  EFFICIENCY_OPTIONS.md  IMPROVEMENT_PLAN.md  LITE_CLIENT_PLAN.md  MODERNIZATION_PLAN.md  PERF_BENCHMARK_PLAN.md  PIPELINE_OPTIMIZATION_PLAN_2026-07.md  PIPELINE_OPTIMIZATION_STATUS_2026-07-21.md  POSE_GRAPH_MATH.md  PROJECT_DESCRIPTION.md  REFACTOR_LOCALIZER_PLAN.md  RELATED_WORK_MAP.md  REMAINING_WORK_PLAN.md  RESEARCH_ADDENDUM_2026-07.md  RESEARCH_INTEGRATION_PLAN.md  SCALE_INVARIANCE.md  SOTA_RESEARCH.md  analysis.md  api_reference.md  architecture.md  future_steps.md  installation.md  modern_analogues.md  object_tracking_plan.md  project_analysis.md  realtime_api_plan.md  roadmap.md  user_guide.md
scratch/: check_cuda.py  generate_components.py  generate_eval_slide.py  generate_pres_visual.py  generate_pres_visuals.py  generate_pres_visuals2.py  generate_usm.py  read_pres.py
scripts/: ab_localization.py  benchmark_hardware.py  benchmark_propagation.py  build_executable.py  build_panorama.py  build_vlad_vocab.py  cash.py  compile_dinov2_trt.py  deb.py  download_models.py  export_models.py  merge_all_to_one.py  migrate_to_lancedb.py  preprot.py  pyi_rth_torch.py  remove_comments.py  retrieval_metrics.py  run_tests.py  stapstarap.py  test_gpu.py  validate_vs_telemetry.py
scripts/allFiles/: __init__.py  all_merged_new.py  calibration__multi_anchor_calibration.py  database__database_builder.py  database__database_loader.py  geometry__coordinates.py  geometry__transformations.py  gui__dialogs__new_mission_dialog.py  gui__mixins____init__.py  gui__mixins__calibration_mixin.py  gui__mixins__panorama_mixin.py  gui__mixins__tracking_mixin.py  gui__widgets____init__.py  gui__widgets__map_widget.py  models____init__.py  models__model_manager.py  models__wrappers__feature_extractor.py  tracking__kalman_filter.py  utils__logging_utils.py  workers__calibration_propagation_worker.py  workers__database_worker.py
scripts/allFilesgui/: dialogs__calibration_dialog.py  mixins__database_mixin.py
scripts/diagnostics/: check_torch.py
src/: __init__.py  exceptions.py  interfaces.py
src/calibration/: __init__.py  gps_calibration.py  multi_anchor_calibration.py  multi_calibration_manager.py
src/core/: export_results.py  headless_runner.py  project.py  project_registry.py  project_video_source.py
src/database/: __init__.py  database_builder.py  database_builder.py.corrupt-bak  database_loader.py  keyframe_selector.py  keypoint_video_writer.py  multi_database_manager.py  schema_fingerprint.py  spatial_index.py
src/depth/: depth_estimator.py
src/geometry/: __init__.py  affine_utils.py  coordinates.py  gsd_calculator.py  point_spread.py  pose_graph_optimizer.py  transformations.py
src/gui/: __init__.py  main_window.py
src/localization/: __init__.py  candidate_retriever.py  debug_collector.py  failure_log.py  geo_aware_retriever.py  geometric_verifier.py  localizer.py  matcher.py  patchify.py  result_builder.py  rotation_geometry.py  rotation_selector.py  scale_manager.py
src/models/: __init__.py  model_manager.py
src/network/: coordinates_broker.py  rest_server.py  ws_server.py
src/tracking/: __init__.py  kalman_filter.py  object_projector.py  object_tracker.py  outlier_detector.py  smoother.py
src/utils/: __init__.py  atomic_io.py  hardware_profile.py  image_preprocessor.py  image_utils.py  logging_utils.py  resolution_normalizer.py  telemetry.py
src/video/: video_source.py
src/workers/: __init__.py  calibration_propagation_worker.py  database_worker.py  debug_renderers.py  multi_anchor_calibration.py  panorama_overlay_worker.py  panorama_worker.py  propagation_pipeline.py  tracking_worker.py  video_decode_worker.py
tests/: conftest.py  test_affine_utils.py  test_benchmark_metrics.py  test_config_defaults.py  test_config_sync.py  test_coordinates.py  test_coordinates_modes.py  test_db_interchangeability.py  test_exceptions.py  test_geometry_utils.py  test_gtsam_optimizer.py  test_hardware_profile.py  test_headless_runner.py  test_interfaces.py  test_kalman_filter.py  test_keyframe_selector.py  test_keypoint_video_writer.py  test_localization.py  test_localization_characterization.py  test_log_scale_interp.py  test_multi_anchor_interpolation.py  test_object_tracker.py  test_optimizer_contract.py  test_pchip_gap_fill.py  test_point_spread.py  test_pose_graph_auto_gap.py  test_pose_graph_diagnostics.py  test_pose_graph_gnc.py  test_pose_graph_jacobian.py  test_pose_graph_kinematic.py  test_pose_graph_loo_anchors.py  test_pose_graph_odometry_consistency.py  test_pose_graph_optimizer.py  test_pose_graph_prelim_centers.py  test_pose_graph_realistic.py  test_pose_graph_regression.py  test_pose_graph_soft_anchors.py  test_pose_graph_two_stage.py  test_pose_graph_vo_guards.py  test_pose_graph_warmstart.py  (+11 more)
tests/benchmarks/: conftest.py  test_benchmark_db_build.py  test_benchmark_tracking.py
tests/fixtures/: localization_baseline.json  localizer_fakes.py
tests/integration/: test_db_builder_characterization.py  test_full_cycle.py  test_pipeline.py
tests/unit/: test_image_preprocessor.py  test_image_utils.py  test_project.py  (+1 more)
(+37 files in other folders)
