[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-topometric-localization"
version = "1.0.0"
description = "Desktop GUI application for topometric drone localization"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Drone Localization Team"}
]

dependencies = [
    "numpy>=1.26.0",
    "opencv-contrib-python>=4.9.0",
    "h5py>=3.10.0",
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "ultralytics>=8.1.0",
    "filterpy>=1.4.0",
    "pyproj>=3.6.0",
    "omegaconf>=2.3.0",
    "loguru>=0.7.0",
    "scipy>=1.12.0",
    "kornia>=0.7.1",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.1",
    "pillow>=10.2.0",
    "lightglue @ git+https://github.com/cvg/LightGlue.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.3.0",
    "ruff>=0.1.9",
    "ty>=0.0.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
qt_api = "pyqt6"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (formatter handles this)
]

[tool.ty]
python-version = "3.11"
exclude = [
    "**/__pycache__",
    "**/.venv",
    "tests",
]
